# scale-free-visual-cortex

./: .env  .gitignore  README.md  demo.ipynb  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
manuscript/: .gitignore  _quarto.yml  clean.sh  prepare_submission.sh  preprint.qmd  references.bib
manuscript/_extensions/raj-magesh/arxiv/: _extension.yml  arxiv.sty  template.tex
manuscript/arxiv/: orcidlink.sty  preprint.bbl  preprint.tex  references.bib
manuscript/arxiv/_tex/: preprint.tex
manuscript/notebooks/: cross_similarity.ipynb  rsa.ipynb  schematic.ipynb  singular_vectors.ipynb  spectra.ipynb
src/lib/analyses/: __init__.py  _spectra.py
src/lib/datasets/: __init__.py  _definition.py  _utilities.py  nsd.py
src/lib/spectra/: __init__.py  _binning.py  _computation.py  _cross_decomposition.py  _plotting.py
src/lib/utilities/: __init__.py  _environment.py
